# TKOM-Interpreter

./: CMakeLists.txt  README.md  gramatyka.txt  main.cpp  tictactoe.gdef.txt
src/EnumClasses/: GameParameterType.h  OperatorType.h  VariableType.h
src/Interpreter/: Interpreter.cpp  Interpreter.h  InterpreterTests.cpp
src/Interpreter/InterpreterStructures/: Evaluation.cpp  Evaluation.h  Execution.cpp  Execution.h  ObjValue.cpp  ObjValue.h  VoidValue.h
src/Parser/: Parser.cpp  Parser.h  ParserTests.cpp
src/Scanner/: Scanner.cpp  Scanner.h  ScannerTests.cpp
src/Tokens/: CommentToken.cpp  CommentToken.h  EmptyToken.h  FloatLiteralToken.cpp  FloatLiteralToken.h  IntLiteralToken.cpp  IntLiteralToken.h  KeyWordToken.cpp  KeyWordToken.h  SymbolToken.cpp  SymbolToken.h  Token.cpp  Token.h  WordToken.cpp  WordToken.h  tokenTypeCheck.cpp  tokenTypeCheck.h
src/VariantsDefinitions/: variantsDefinitons.h
src/ast/: AstNode.h
src/ast/nodes/: Block.cpp  Block.h  BracketsName.cpp  BracketsName.h  DefFunction.cpp  DefFunction.h  DefGameParameter.h  DefObject.h  ExpressionNode.cpp  ExpressionNode.h  FloatLiteral.cpp  FloatLiteral.h  FunctionCall.cpp  FunctionCall.h  IfStatement.cpp  IfStatement.h  IntLiteral.cpp  IntLiteral.h  Language.cpp  Language.h  LocalVariableDeclaration.cpp  LocalVariableDeclaration.h  ReturnStatement.cpp  ReturnStatement.h  StartBlock.h  TrueFalseLiteral.h  ValueAssignment.cpp  ValueAssignment.h  VariableName.h  WhileLoop.cpp  WhileLoop.h
